<resources>
    <string name="app_name">AhnT</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">로그인</string>

    <!-- Strings related to login & Register -->
    <string name="action_sign_in">로그인 또는 회원가입</string>
    <string name="action_sign_in_short">로그인</string>
    <string name="action_register">회원가입</string>

    <string name="error_invalid_email">이메일 형식이 올바르지 않습니다</string>
    <string name="error_invalid_password">8자이상, 특수 문자 및 숫자 하나이상, 대소문자를 포함해 비밀번호를 입력해주세요.</string>
    <string name="error_incorrect_password">비밀번호가 옳지 않습니다</string>
    <string name="error_field_required">이 칸을 채워주세요</string>
    <string name="error_login">이메일또는 비밀번호가 일치하지않습니다.</string>

    <string name="error_server">서버와 통신 중 오류가 발생하였습니다. 잠시 후 다시 시도해주세요.</string>

    <string name="prompt_email">이메일</string>
    <string name="prompt_password">비밀번호</string>
    <string name="prompt_username">이름</string>
    <string name="prompt_gender">성별</string>
    <string name="prompt_mobile">전화번호</string>
    <string name="prompt_gender_woman">여성</string>
    <string name="prompt_gender_man">남성</string>
    <string name="error_register_duplicate_email">중복된 이메일이 존재합니다.</string>
    <string name="prompt_password_repeat">비밀번호 확인</string>
    <string name="error_password_not_match">비밀번호가 일치하지 않습니다.</string>

    <string-array name="grade_arrays">
        <!--<item>1학년</item>-->
        <!--<item>2학년</item>-->
        <item>3학년</item>
    </string-array>
    <string-array name="classroom_arrays">
        <item>1반</item>
        <item>2반</item>
        <item>3반</item>
    </string-array>
    <string-array name="classnumber_arrays">
        <item>1번</item>
        <item>2번</item>
        <item>3번</item>
        <item>4번</item>
        <item>5번</item>
        <item>6번</item>
        <item>7번</item>
        <item>8번</item>
        <item>9번</item>
        <item>10번</item>
        <item>11번</item>
        <item>12번</item>
        <item>13번</item>
        <item>14번</item>
        <item>15번</item>
        <item>16번</item>
        <item>17번</item>
        <item>18번</item>
        <item>19번</item>
        <item>20번</item>
    </string-array>

</resources>
